# archimedes-survey

./: .gitignore
control/: auto_navigate.py  fleet_coordinator.py  lora_bridge.py  requirements.txt  teleop_node.py  tide_predictor.py  web_dashboard.py
data/: mission_analyzer.py  mission_waypoints_2026_03.json  priority_cells.json  survey_geojson_embed.json  survey_geojson_final.js  survey_geojson_safe.json  survey_grid_2026_03.json  survey_grid_2026_03.kml  wanggong_mission_routes.json
deep_rl/: archimedes_survey.xml  arm_env.py  deploy_ros2.py  loco_env.py  requirements.txt  run_all.py  survey_env.py  train.py
deploy/: archimedes-ros.service  archimedes.service  install.sh
docs/: all_scenarios_results.json  archimedes_project_report.html  arm_comparison.md  cnn_data_collection.md  dev_session_20260319.md  extreme_sim_report.md  extreme_sim_results.json  field_data_collection.md  field_test_record.md  frame_procurement_report.html  gemini_research_briefing.md  gemini_session2_briefing.md  isaac_sim_matrix_results.json  isaac_sim_results.json  legal_permits.md  max_load_analysis.json  motor_analysis.json  power_system.md  print_checklist_phase3.md  procurement_bom_v1.md  procurement_bom_v2.md  (+7 more)
ros2/: arm_deploy_action.py  package.xml  setup.cfg  setup.py
ros2/archimedes_survey/: acoustic_cscan.py  acoustic_processor.py  burrow_analyzer.py  burrow_cnn.py  camera_calibrate.py  hull_sonar_node.py  mission_logger.py  recovery_behavior.py  rl_agent_node.py  stepper_driver_node.py  ultrasound_node.py  visual_servo_node.py
ros2/config/: joint_limits.yaml  servo_controller.yaml
ros2/launch/: arm_display.launch.py  full_system.launch.py
ros2/urdf/: arm_3dof.urdf.xacro
(+190 files in other folders)
